--- a/WWW/main.css
+++ b/WWW/main.css
@@ -21,6 +21,7 @@ body {
 	color:#CCC;
 	background:#333;
 	padding:20px;
+    font-size:15x; 
 }
 img {
     position: absolute;
@@ -35,6 +36,24 @@ img {
     padding-top:30px;
     padding-left:270px; 
 }
+
+#content {
+    width: 100%;
+    height: 600px;
+    padding-top: 60px;
+    background-color:silver;
+    
+}
+
+#maincontent {
+    width:100%;
+    height:100%;
+    padding:20px;
+    margin: 20px;
+    
+}
+
+
 /*ul.tabs {
     list-style-type:none;
     margin:0;
