--- a/WWW/main.css
+++ b/WWW/main.css
@@ -1,4 +1,7 @@
-html {height:100%;}
+html {
+    height:100%;
+    width:100%;
+}
 * {
     margin:0;
     padding:0;
@@ -16,7 +19,7 @@ body {
 	position:fixed;
 	top:0px;
 	left:0px;
-    height:70px;
+    height:10%;
 	width:100%;
 	color:#CCC;
 	background:#333;
@@ -77,27 +80,45 @@ ul.tabs li a {
     color:white;
 }*/
 ul#menu {
-    float:right;
-    margin:0;
+    /*float:right;
+    margin:0;*/
+    position:fixed;
+    top:100px;
+    left:0;
+    right:0;
+    bottom:0;
+    background-color:#aaa;
+    color:green;
+    min-width:800px;
+    text-align:left;
+    height:20px;
+    padding:10px 20px;
+    width:100%;
 }
 ul#menu li{
     float: left;
     list-style: none;
-    margin: 10px 2px 0 0;
+    margin: 0 auto;
     background: transparent;
     
 }
 
 ul#menu li a { 
     font: normal 100% 'trebuchet ms', sans-serif;
-    display: block; 
+    /*display: block; 
     float: left; 
     height: 20px;
     padding: 6px 25px 5px 28px;
     text-align: center;
     color: #FFF;
     text-decoration: none;
-    background: transparent;
+    background: transparent;*/
+    font-size:14px;
+    margin:10px 0;
+    height:15%;
+    padding:15px 90px;
+    color:#000;
+    text-decoration:none
     
 }
 #footer {
