--- a/WWW/main.css
+++ b/WWW/main.css
@@ -11,7 +11,7 @@ body {
 	background-color: #CCC;
 	margin:80px 80px 100px 100px;
 }
-#header, #menubar, #footer {
+#header, #footer {
     margin-left: auto; 
     margin-right: auto;
 }
@@ -42,12 +42,6 @@ img {
 img:hover {
     transform: scale(1.1);
 }
-/*#menubar {
-    width:900px;
-    height:50px;
-    padding-top: 45px;
-    padding-left:270px; 
-}*/
 
 #content {
     width: 100%;
@@ -56,7 +50,6 @@ img:hover {
     background-color:silver;
     
 }
-
 #maincontent {
     width:100%;
     height:100%;
@@ -96,7 +89,6 @@ ul.tabs li a {
 .navbar:after {
     clear:both;
 }
-
 nav {
     position:fixed;
     top:100px;
@@ -121,7 +113,6 @@ nav li{
     display:inline;
     float: left;
 }
-
 nav a { 
     color:white;
     /*display: block; 
@@ -137,7 +128,7 @@ nav a {
     text-decoration:none;
     line-height:50px;
     text-shadow: 1px 1px 0px #283744;
-    padding: 0 80px;
+    padding: 0 20px;
 }
 nav li a {
     border-right: 1px solid #576979;
@@ -147,7 +138,6 @@ nav li:last-child a {
 	border-right: 0;
 }
 li:hover a {background-color:#2DC751}
-
 #footer {
 	position:fixed;
 	bottom:0px;
@@ -157,7 +147,7 @@ li:hover a {background-color:#2DC751}
 	background:#333;
 	padding:8px;
 }
-@media screen and (max-width:480px) {
+@media screen and (max-width:600px) {
     .menuimage1 {
         display:none;
     }
@@ -166,26 +156,27 @@ li:hover a {background-color:#2DC751}
     }
     nav { 
         position:fixed;
-  		height: auto;
+  		height:auto;
   	}
   	nav ul {
-  		width: 100%;
-  		display: block;
-  		height: auto;
+  		width:100%;
+  		display:block;
+  		height:auto;
   	}
   	nav li {
-  		width: 50%;
-  		float: left;
-  		position: relative;
+  		width:50%;
+  		float:left;
+  		position:relative;
   	}
   	nav li a {
-		border-bottom: 1px solid #576979;
-		border-right: 1px solid #576979;
+		border-bottom:1px solid #576979;
+		border-right:1px solid #576979;
 	}
   	nav a {
-	  	text-align: left;
-	  	width: 100%;
-	  	text-indent: 25px;
+	  	text-align:left;
+	  	width:100%;
+	  	text-indent:25px;
+        padding:0 auto;
   	}
 }
 
