--- a/styles/main.css
+++ b/styles/main.css
@@ -1,61 +1,70 @@
-html {height:100%;}
-* {
-    margin:0;
-    padding:0;
+html {
+    height: 100%;
 }
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color:#CCC;
-	background-image:url('/Images/background.png');
+    height: 100%;
+    background-color: #CCC;
+    background-image: url('/Images/background.png');
     background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size:50% 65%;
+    background-size: 50% 65%;
     background-position: center;
-	margin:80px 80px 100px 100px;
+    margin: 80px 80px 100px 100px;
     font-family: "Lato", sans-serif;
 }
-#header, #menubar, #footer {
-    margin-left: auto; 
+
+nav,
+#header,
+footer {
+    margin-left: auto;
     margin-right: auto;
 }
+
 #header {
-	position:fixed;
-	top:0px;
-	left:0px;
-    height:70px;
-	width:100%;
-	color:#CCC;
-	background:#333;
-	padding:20px;
-    font-size:15x; 
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    height: 11%;
+    width: 100%;
+    color: #CCC;
+    background: #333;
+    padding: 20px;
+    font-size: 15x;
 }
-img {
+
+#logo {
     position: absolute;
-    height:339px;
+    height: 339px;
     left: -70px;
     top: -60px;
     z-index: -3;
 }
-#menubar {
-    width:900px;
-    height:70px;
-    padding-top:30px;
-    padding-left:270px; 
+
+nav {
+    width: 900px;
+    height: 70px;
+    padding-top: 30px;
+    padding-left: 270px;
 }
 
 #content {
     width: 100%;
     height: 600px;
     padding-top: 60px;
-    background-color:silver;
-    
+    background-color: silver;
 }
 
 #maincontent {
-    width:100%;
-    height:100%;
-    padding:20px;
+    width: 100%;
+    height: 100%;
+    padding: 20px;
     margin: 20px;
-    
 }
 
 
@@ -77,22 +86,23 @@ ul.tabs li a {
     text-decoration:none;
     color:white;
 }*/
+
 ul#menu {
-    float:right;
-    margin:0;
+    float: right;
+    margin: 0;
 }
-ul#menu li{
+
+ul#menu li {
     float: left;
     list-style: none;
     margin: 10px 2px 0 0;
     background: transparent;
-    
 }
 
-ul#menu li a { 
+ul#menu li a {
     font: normal 100% 'trebuchet ms', sans-serif;
-    display: block; 
-    float: left; 
+    display: block;
+    float: left;
     height: 20px;
     padding: 6px 25px 5px 28px;
     text-align: center;
@@ -100,48 +110,57 @@ ul#menu li a {
     text-decoration: none;
     background: transparent;
 }
-#footer {
-	position:fixed;
-	bottom:0px;
-	left:0px;
-	width:100%;
-	color:#CCC;
-	background:#333;
-	padding:8px;
+
+footer {
+    position: fixed;
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    color: #CCC;
+    background: #333;
+    padding: 0.5%;
 }
+
 #intro {
-    color: #086490; 
-    font-family: "Great Vibes"; 
-    font-size: 80px; 
-    line-height: 140px; 
-    font-weight: normal; 
-    margin-bottom: 0px; 
-    margin-top: 20px; 
-    text-align: center; 
+    color: #086490;
+    font-family: "Great Vibes";
+    font-size: 80px;
+    line-height: 140px;
+    font-weight: normal;
+    margin-bottom: 0px;
+    margin-top: 20px;
+    text-align: center;
     text-shadow: 0 1px 1px #fff;
 }
+
 #summary p {
-  clear: right;
-  color: #dd3b2a;
-  float: right;
-  font-style: italic;
-  margin: 0;
-  width: 300px;
+    clear: right;
+    color: #dd3b2a;
+    float: right;
+    font-style: italic;
+    margin: 0;
+    width: 300px;
 }
-#mission{
-  clear: left;
-  float: left;
-  left: 50%;
-  margin-left: -520px;
-  max-width: 495px;
-  position: relative;
-  top: 200px;
-  width: 50%;
-  z-index: 4;
+
+#mission {
+    clear: left;
+    float: left;
+    left: 50%;
+    margin-left: -520px;
+    max-width: 495px;
+    position: relative;
+    top: 200px;
+    width: 50%;
+    z-index: 4;
 }
-#mission h2, #vision h2, #core h2, #join h2{
+
+#mission h2,
+#vision h2,
+#core h2,
+#join h2 {
     color: #dd3b2a;
 }
+
 #vision {
     clear: right;
     float: right;
@@ -153,19 +172,21 @@ ul#menu li a {
     width: 50%;
     z-index: 4;
 }
+
 #core {
-  clear: left;
-  float: left;
-  left: 50%;
-  margin-left: -520px;
-  max-width: 495px;
-  position: relative;
-  top: 350px;
-  width: 50%;
-  z-index: 4;
+    clear: left;
+    float: left;
+    left: 50%;
+    margin-left: -520px;
+    max-width: 495px;
+    position: relative;
+    top: 350px;
+    width: 50%;
+    z-index: 4;
 }
+
 #join {
-  clear: right;
+    clear: right;
     float: right;
     right: 50%;
     margin-right: -520px;
@@ -176,6 +197,22 @@ ul#menu li a {
     z-index: 4
 }
 
+td {
+    border: 5px solid black;
+}
 
+main {
+    height: 78.5%;
+    width: 100%;
+    margin: 9.5% 0 0 0;
+}
 
+.about {
+    width: 30%;
+    height: 30%;
+}
 
+.about-pics {
+    width: 30%;
+    height: 20%;
+}
