--- a/Draft/main.css
+++ b/Draft/main.css
@@ -27,19 +27,44 @@ header video {
 	min-height: 100%;
 	min-width: 100%;
 }
+.navbar:before,
+.navbar:after {
+    content: " ";
+    display: table;
+}
+.navbar:after {
+    clear: both;
+}
+.navbar {
+    *zoom: 1;
+}
 
 nav{
-	position:fixed;
-	padding-top: 2%;
-	padding-right: 80%;
-	padding-left: 20px;
+	height:40px;
+    width:100%;
+    position:relative;
 }
 
-nav ul li {
-    font-size: 20px;
-    display: inline-block;
+nav ul {
+    padding:0;
+    margin: 0 auto;
+    width: 600px;
+    height: 70px;
 }
-
+nav li {
+    display: inline;
+    float: left;
+    
+}
+nav li img {
+    color: #fff;
+	display: inline-block;
+	width: 100px;
+	text-align: center;
+	text-decoration: none;
+	line-height: 40px;
+	text-shadow: 1px 1px 0px #283744;
+}
 
 #mission{
 	padding: 50px 80px;
