--- a/Draft/main.css
+++ b/Draft/main.css
@@ -50,11 +50,34 @@ nav ul li {
 	height: 30%;
 	width: 30%; 
 	float:left;
+    width: 300px;
+    height: 200px;
+   
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+#mission img:hover {
+     width: 320px;
+     height: 220px;
 }
 
 #mission p, #mission h2{
 	margin-left: 35%;
 	text-align: justify;
+}
+
+#care {
+    background-image: url(images/pic1.jpg);
+    background-size: 100%, 400px;
+    background-color: black;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 #vision {
@@ -66,6 +89,19 @@ nav ul li {
 	height:20%;
 	width:20%;
 	float:right;
+    width: 220px;
+    height: 300px;
+    
+    -webkit-transition: all 1s ease;
+    -moz-transition: all 1s ease;
+    -o-transition: all 1s ease;
+    -ms-transition: all 1s ease;
+          transition: all 1s ease;
+}
+
+#vision img:hover{
+    width: 240px;
+    height: 320px;
 }
 
 #vision p, #vision h2{
@@ -90,6 +126,16 @@ nav ul li {
 	margin-left: 10%;
 	height: 10%;
 	width: 10%;
+}
+
+#principle {
+    text-align: left;
+	padding: 50px 80px;
+}
+
+#principle ol{
+    font-family: "EngraversGothic BT";
+    font-size: 20px;
 }
 
 #join{
