--- a/Draft/main.css
+++ b/Draft/main.css
@@ -69,10 +69,12 @@ nav li img {
 
 #about {
     padding: 50px 80px;
+    background-color: #461F00;
 }
 
 #mission{
 	padding: 50px 80px;
+    background-color: #461F00;
 }
 
 #mission img{
@@ -126,6 +128,7 @@ nav li img {
 
 #vision {
 	padding: 50px 80px;
+    background-color: #461F00;
 }
 
 #vision img{
@@ -142,7 +145,7 @@ nav li img {
 }
 
 #vision img:hover{
-    width:20%;
+    width:20    %;
     height: 18%;
 }
 
@@ -158,6 +161,7 @@ nav li img {
 #values{
 	padding: 50px 80px;
 	text-align: center;
+    background-color: #461F00;
 }
 
 .img-circle {
@@ -173,6 +177,7 @@ nav li img {
 #principle {
     text-align: left;
 	padding: 50px 80px;
+    background-color: #461F00;
 }
 
 #principle ol{
@@ -182,6 +187,7 @@ nav li img {
 
 #join{
  padding: 50px 80px;
+ background-color: #461F00;
 
 }
 
