arrange and add photos to the gallery section and a content about how we care with the animal to draft.html

--- a/Draft/main.css
+++ b/Draft/main.css
@@ -41,6 +41,7 @@ header video {
 }
 
 nav{
+    position: fixed;
 	height:40px;
     width:100%;
     position:relative;
@@ -127,6 +128,18 @@ nav li img {
     background-size: cover;
 }
 
+#imgthree{
+    width: 100%;
+    height: 500px;
+    background-image: url(images/pic3.jpg);
+    background-size: 100%, 1000px;
+    background-color: black;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 #vision {
 	padding: 50px 80px;
     background-color: #DCB579;
@@ -165,14 +178,20 @@ nav li img {
     background-color: #DCB579;
 }
 
+#wecare{
+	padding: 50px 80px;
+	text-align: center;
+    background-color: #DCB579;
+}
+
 .img-circle {
 	border: 1px solid #ddd;
 	border-radius: 10px;
 	padding: 1%;
 	margin-right:10%;
 	margin-left: 10%;
-	height: 10%;
-	width: 10%;
+	height: 250px;
+	width: 300px;
 }
 
 #principle {
