--- a/Draft/main.css
+++ b/Draft/main.css
@@ -1,19 +1,19 @@
-html{
-    width:100%;
+html {
+    width: 100%;
+    height: 100%;
 }
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
-h3{
+h3 {
     font-family: cursive;
     text-align: center;
     font-size: 30px;
     color: black;
 }
-
 
 p {
     font-size: 20px;
@@ -22,51 +22,55 @@ p {
 }
 
 header video {
-	margin-top:4%;
-	width:100%;
-	height:100%;
-	min-height: 100%;
-	min-width: 100%;
+    margin-top: 4%;
+    width: 100%;
+    height: 100%;
+    min-height: 100%;
+    min-width: 100%;
 }
+
 .navbar:before,
 .navbar:after {
     content: " ";
     display: table;
 }
+
 .navbar:after {
     clear: both;
 }
+
 .navbar {
     *zoom: 1;
 }
 
-nav{
+nav {
     position: fixed;
-	height:40px;
-    width:100%;
-    position:relative;
+    height: 40px;
+    width: 100%;
+    position: relative;
     background-color: #DCB579;
 }
 
 nav ul {
-    padding:0;
+    padding: 0;
     margin: 0 auto;
     width: 600px;
     height: 70px;
 }
+
 nav li {
     display: inline;
     float: left;
-    
 }
+
 nav li img {
     color: #fff;
-	display: inline-block;
-	width: 100px;
-	text-align: center;
-	text-decoration: none;
-	line-height: 40px;
-	text-shadow: 1px 1px 0px #283744;
+    display: inline-block;
+    width: 100px;
+    text-align: center;
+    text-decoration: none;
+    line-height: 40px;
+    text-shadow: 1px 1px 0px #283744;
 }
 
 #about {
@@ -74,34 +78,34 @@ nav li img {
     background-color: #DCB579;
 }
 
-#mission{
-	padding: 50px 80px;
+#mission {
+    padding: 50px 80px;
     background-color: #DCB579;
 }
 
-#mission img{
-	border-radius: 50%;
-	height: 30%;
-	width: 30%; 
-	float:left;
+#mission img {
+    border-radius: 50%;
+    height: 30%;
+    width: 30%;
+    float: left;
     width: 300px;
     height: 200px;
-   
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
-          transition: all 1s ease;
+    transition: all 1s ease;
 }
 
 #mission img:hover {
-     width: 320px;
-     height: 220px;
+    width: 320px;
+    height: 220px;
 }
 
-#mission p, #mission h2{
-	margin-left: 35%;
-	text-align: justify;
+#mission p,
+#mission h2 {
+    margin-left: 35%;
+    text-align: justify;
 }
 
 #care {
@@ -116,7 +120,7 @@ nav li img {
     background-size: cover;
 }
 
-#hound{
+#hound {
     width: 100%;
     height: 500px;
     background-image: url(images/pic2.jpg);
@@ -128,7 +132,7 @@ nav li img {
     background-size: cover;
 }
 
-#imgthree{
+#imgthree {
     width: 100%;
     height: 500px;
     background-image: url(images/pic3.jpg);
@@ -141,7 +145,7 @@ nav li img {
 }
 
 #vision {
-	padding: 50px 80px;
+    padding: 50px 80px;
     background-color: #DCB579;
 }
 
@@ -155,92 +159,152 @@ nav li img {
     background-color: #DCB579;
 }
 
-#promote ul{
+#promote ul {
     font-family: "EngraversGothic BT";
     font-size: 20px;
 }
 
-#vision img{
-	border-radius: 50%;
-	height:15%;
-	width:18%;
-	float:right;
-  
+#vision img {
+    border-radius: 50%;
+    height: 15%;
+    width: 18%;
+    float: right;
     -webkit-transition: all 1s ease;
     -moz-transition: all 1s ease;
     -o-transition: all 1s ease;
     -ms-transition: all 1s ease;
-          transition: all 1s ease;
+    transition: all 1s ease;
 }
 
-#vision img:hover{
-    width:20    %;
+#vision img:hover {
+    width: 20 %;
     height: 18%;
 }
 
-#vision p, #vision h2{
-	text-align:right;
-	margin-right: 25%
+#vision p,
+#vision h2 {
+    text-align: right;
+    margin-right: 25%
 }
 
-#vision h2{
-	margin-top: 10%
+#vision h2 {
+    margin-top: 10%
 }
 
-#values{
-	padding: 50px 80px;
-	text-align: center;
+#values {
+    padding: 50px 80px;
+    text-align: center;
     background-color: #DCB579;
 }
 
-#wecare{
-	padding: 50px 80px;
-	text-align: center;
+#wecare {
+    padding: 50px 80px;
+    text-align: center;
     background-color: #DCB579;
 }
 
 .img-circle {
-	border: 1px solid #ddd;
-	border-radius: 10px;
-	padding: 1%;
-	margin-right:10%;
-	margin-left: 10%;
-	height: 250px;
-	width: 300px;
+    border: 1px solid #ddd;
+    border-radius: 10px;
+    padding: 1%;
+    margin-right: 10%;
+    margin-left: 10%;
+    height: 250px;
+    width: 300px;
 }
 
 #principle {
     text-align: left;
-	padding: 50px 80px;
+    padding: 50px 80px;
     background-color: #DCB579;
 }
 
-#principle ol{
+#principle ol {
     font-family: "EngraversGothic BT";
     font-size: 20px;
 }
 
-#join{
- padding: 50px 80px;
- background-color: #DCB579;
-
+#join {
+    padding: 50px 80px;
+    background-color: #DCB579;
 }
 
-#gallery{
+#gallery {
     text-align: center;
     padding: 50px 80px;
     background-color: #DCB579;
 }
 
-#footer{
-	bottom:0px;
-	left:0px;
-	width:100%;
-	color: #D3D3D3;
-	background-color: black;
-	
+#footer {
+    bottom: 0px;
+    left: 0px;
+    width: 100%;
+    color: #D3D3D3;
+    background-color: black;
 }
-#footer a{
+
+#footer a {
     color: floralwhite;
     text-decoration: none;
+}
+
+#about {
+    width: 100%;
+    height: 100%;
+    display: inline-block;
+}
+
+#galo {
+    display: inline-block;
+    width: 20%;
+    float: left;
+    margin: 0 0 0 5%;
+}
+
+#danzel,
+#patricia {
+    display: inline-block;
+    width: 20%;
+    float: left;
+    margin: 0 0 0 10%;
+}
+
+#angelo {
+    display: inline-block;
+    width: 21.5%;
+    float: right;
+    margin: 10% 25% 0 0%;
+}
+
+#miguel {
+    display: inline-block;
+    width: 23%;
+    float: left;
+    margin: 10% 0 0 20%;
+}
+
+#galo-pic,
+#danzel-pic,
+#patricia-pic {
+    width: 100%;
+    height: 10%;
+}
+
+#miguel-pic {
+    width: 100%;
+    height: 10%;
+}
+
+#angelo-pic {
+    width: 100%;
+    height: 10%;
+}
+
+.name {
+    font-weight: bold;
+    text-align: center;
+}
+
+.role {
+    text-align: center;
 }
