--- a/Draft/main.css
+++ b/Draft/main.css
@@ -248,17 +248,19 @@ nav li img {
     text-decoration: none;
 }
 
-#about {
+#about-us {
     width: 100%;
     height: 100%;
     display: inline-block;
+    background-color: #DCB579;
+    margin: 0 0 0 0;
 }
 
 #galo {
     display: inline-block;
     width: 20%;
     float: left;
-    margin: 0 0 0 5%;
+    margin: 0 0 0 10%;
 }
 
 #danzel,
@@ -307,4 +309,10 @@ nav li img {
 
 .role {
     text-align: center;
+}
+
+#about-us h2 {
+    background-color: #DCB579;
+    text-align: center;
+    margin: 0 0 3% 0;
 }
