Edited the font of the ul pricipless

--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -259,7 +259,7 @@ nav li img {
 }
 
 #principle ul {
-    font-family: "OstrichSans-Black";
+    font-family: "SF_Cartoonist_Hand";
     font-size: 20px;
 }
 
