changed font for principles to match website

--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -206,10 +206,11 @@ nav li img {
 #promote {
     padding: 50px 80px;
     background-color: #DCB579;
+    
 }
 
 #promote ul {
-    font-family: "OstrichSans-Black";
+    font-family: "SF_Cartoonist_Hand";
     font-size: 20px;
 }
 
