--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -36,10 +36,20 @@ html {
     height: 100%;
 }
 
+body {
+    
+    min-height: 100%;
+    height: 100%
+    
+    
+}
+
 * {
     margin: 0;
     padding: 0;
 }
+
+
 
 h1 {
     
@@ -91,12 +101,14 @@ nav:after {
 
 nav {
     position: fixed;
-    height: 10%;
-    width: 88%;
+    height: 100%;
+    min-height: 100%;
+    width: 83%;
     position: relative;
-    background-color: #DCB579;
-    padding: 0 0 1% 12%;
-    background-image: url(images/pic1.jpg);
+    padding:  0 12% 1% 17%;
+    background-image: url(../images/ANIMALTALKSBackground.png);
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     
 }
 
