--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -105,7 +105,7 @@ nav {
     min-height: 100%;
     width: 83%;
     position: relative;
-    padding:  0 12% 1% 17%;
+    padding:  1% 12% 1% 17%;
     background-image: url(../images/ANIMALTALKSBackground.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
@@ -306,7 +306,7 @@ footer a {
 
 #about-us {
     width: 100%;
-    height: 100%;
+    height: auto;
     display: inline-block;
     background-color: #DCB579;
     margin: 0 0 0 0;
