edited css color scheme

--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -287,7 +287,7 @@ nav li img {
 #gallery {
     text-align: center;
     padding: 50px 80px;
-    background-color: #DCB579;
+    background-color: #5D5D5D;
 }
 
 footer {
