--- a/Draft/styles/main.css
+++ b/Draft/styles/main.css
@@ -93,7 +93,7 @@ nav {
     width: 83%;
     position: relative;
     padding:  1% 0 1% 17%;
-    background-image: url(../images/ANIMALTALKSBackground.png);
+    background-image: url(images/ANIMALTALKSBackground.png);
     background-repeat: no-repeat;
     background-size: 100% 100%;
     
