--- a/altstyle/altstyle/altstyle.css
+++ b/altstyle/altstyle/altstyle.css
@@ -1,13 +1,46 @@
+@font-face {
+    font-family: OstrichSans-Black;
+    src: url(fonts/OstrichSans-Black.otf);
+    
+}
+
+@font-face {
+    font-family: SF_Cartoonist_Hand;
+    src: url(fonts/SF_Cartoonist_Hand.ttf);
+    
+}
+@font-face {
+    font-family: TooneyNoodleNF;
+    src: url(fonts/TooneyNoodleNF.ttf);
+}
+@font-face{
+    font-family: organique;
+    src: url(fonts/organique.otf);
+}
 *{
     margin-left:auto;
     margin-right:auto;
 }
 body{
-    background-color: #F5F4F2;
-    margin:0;
+    background-color: white;
+    margin: 0;
+}
+h1 {
+    font-family: "organique";
+    font-size: 30pt;
+}
+h2 {
+    font-family: "TooneyNoodleNF";
+    text-align: center;
+    font-size: 30px;
+    color: black;
 }
 p {
     text-align:justify;
+    font-size: 20px;
+    font-family: "SF_Cartoonist_Hand";
+    color: black;
+
 }
 nav:before,
 nav:after {
@@ -41,7 +74,8 @@ nav ul {
     margin: 0 auto;
     width: 100%;
     height: 6%;
-    
+    font-family: "OstrichSans-Black";
+    font-size: 20pt;
 }
 
 nav ul a{
@@ -75,6 +109,13 @@ nav li {
 #greeting {
     text-align:center;
 }
+
+#about {
+    
+    padding: 1% 6% 1% 6%;
+    
+}
+
 #about-animal{
     text-align:center;
 }
@@ -84,10 +125,11 @@ nav li {
 }
 #mission{
     float:left;       
-    width:50%;
-    height:50%;
+    width: 38%;
+    margin: 2.5% 3% 3% 7%;
     background-color:aliceblue;
     border-radius:25px;
+    padding: 1% 1% 0 1%;
 }
 #mission img{
     height:200px;
@@ -99,13 +141,16 @@ nav li {
 #mission-content {
     padding: 2%;
 }
+
 #vision{
-    float:right;
-    width:50%;
+    float: right;       
+    width: 38%;
+    margin: 2.5% 6% 3% 3%;
     height:50%;
     background-color:aliceblue;
-    border-radius:10px;
-    padding-bottom: 1.2%;
+    border-radius:25px;
+    padding-bottom: 1.5%;
+    padding: 1% 1% 3% 1%;
 }
 #vision img{
     height:200px;
@@ -117,12 +162,28 @@ nav li {
 #vision-content {
     padding: 2%;
 }
+#care {
+    width: 100%;
+    height: 500px;
+    
+}
 #values{
     height:50%;
+    margin: 4% 3% 0 3%;
+    background-color:aliceblue;
+    background-image: url('images/CoreValuesIcon.png');
+    background-repeat: no-repeat;
+    background-size: 40% 70%;
+    position: relative;
+    background-position: left;
+    border-radius:25px;
+    padding: 1% 1% 1% 1%;
     margin-top:0;
     padding-left:19%;
     padding-right:5%;
     clear:right;
+ 
+    
 } 
 
 
@@ -130,20 +191,48 @@ nav li {
 #social-content{
     padding:0 0 0 38%;
 }
+
 #principle{
+    background-color:aliceblue;
+    text-align-last: center;
+    margin: 2% 3% 0 3%;
+    border-radius:25px;
+    padding: 1% 1% 2% 1%;
     height:50%;
-    padding-left:5%;
+   
+}
+
+#principle ul{
+    list-style-type: none;
+    font-family: "SF_Cartoonist_Hand";
+    font-size: 20px;
 }
 
 
+#principle-content {
+    
+    margin: 2% 0 0 8%;
+}
+
+ul {
+    
+    margin: 1% 0 0 6%;
+}
+    
+
+
 #gallery {
-    text-align: center;
-    padding: 50px 80px;
-    background-color: #DCC7AA;
+    
+}
+
+#gallery-header {
+    
+   text-align: center;
 }
 
 .table-gallery img:nth-child(1){
 float:left;
+    margin: 0 0 0 11.4%
 
 }	
 
@@ -154,7 +243,7 @@ float:left;
 
 .table-gallery img:nth-child(3){
 float:right;
-
+    margin: 0 11% 0 0;
 }
 
 .img-circle {
@@ -163,6 +252,12 @@ float:right;
     padding: 1%;
     height: 250px;
     width: 300px;
+    transition: all 0.5s ease;
+}
+
+.img-circle:hover {
+    border-radius: 50%;
+    transform: rotate(360deg);
 }
 
 #galo {
@@ -209,5 +304,41 @@ float:right;
 #angelo-pic {
     width: 100%;
     height: 10%;
+}
+
+
+#wecare, #dream, #promote, #about-us, #join  {
+    background-color:aliceblue;
+    margin: 2% 8% 0 8%;
+    border-radius:25px;
+    padding: 1% 1% 1% 1%
+}
+#promote ul li{
+    font-family: "SF_Cartoonist_Hand";
+    font-size: 20px;
+}
+
+#about-us {
+ 
+    display: inline-block;
+    
+}
+
+footer {
+    background-color:cadetblue;
+    text-align: center;
+    padding: 1% 0 1% 0;
+    margin-top: 2%;
+    font-family: OstrichSans-Heavy;
+}
+
+footer a{
+    text-decoration: none;
+    color: black;
+}
+#aboutus-header, joinus-header {
+    
+    text-align: center;
+    
 }
 
